# hodei-artifacts

./: .gitignore  .gitmessage  ARTIFACT_CRATE_FINAL_STATUS.md  ARTIFACT_CRATE_FINAL_STATUS_REPORT.md  ARTIFACT_CRATE_FINAL_SUMMARY.md  ARTIFACT_CRATE_STATUS.md  CHECKLIST.md  COMMIT_MESSAGE.md  COMPLETION_GUIDE.md  CURRENT_STATE_FINAL.md  Cargo.toml  EXECUTIVE_SUMMARY.md  FINAL_SUMMARY.txt  HANDLERS_IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TESTS_PLAN.md  LICENSE  Makefile  QUICK_COMMANDS.md  QWEN.md  README.en.md  README.es.md  README.md  REFACTORING_COMPLETE_SUMMARY.md  REFACTOR_ANALYSIS.md  SBOM_GENERATION_COMMIT_MESSAGE.txt  SCHEMA_SOLUTION.md  START_HERE.md  STATUS_AND_NEXT_STEPS.md  TESTING_README.md  TESTS_IMPLEMENTATION_SUMMARY.md  TODO.md  check_bytes_correctly.py  commit-message.md  conventional_commit_message.txt  coverage_report.txt  curl_examples.sh  debug_bytes.py  debug_cedar.rs  (+15 more)
crates/artifact/: Cargo.toml  README.en.md  README.md
crates/artifact/src/: error.rs  lib.rs
crates/artifact/tests/: _removed_unit_artifact_repository.rs.disabled  basic_upload_test.rs  it_chunk_upload.rs  it_download_artifact.rs  it_event_downstream_validation.rs  it_idempotency_race.rs  it_kafka_publisher_integration.rs  it_mongodb_isolated.rs  it_publisher_json_schema.rs  it_rabbitmq_event_flow.rs  it_rabbitmq_event_publishing.rs  it_rabbitmq_publisher_integration.rs  it_resilience_rabbitmq_failures.rs  it_resilience_s3_failures.rs  it_s3_storage_integration.rs  it_testcontainers_isolated.rs  it_upload_artifact.rs  it_upload_progress.rs  it_upload_progress_api.rs  test_utils.rs  unit_upload_artifact_logic.rs
crates/distribution/: Cargo.toml  README.md
crates/distribution/docs/: api-specifications.md
crates/distribution/examples/: integration_example.rs  simple_integration.rs
crates/distribution/src/: error.rs  lib.rs
crates/distribution/tests/: it_distribution_error_handling.rs  it_distribution_rabbitmq_integration.rs  it_maven_distribution.rs  it_npm_distribution.rs  it_npm_tarball_upload.rs  it_resilience_distribution_failures.rs
crates/hodei-authorizer/: Cargo.toml  README.md
crates/hodei-authorizer/src/: application.rs  authorizer.rs  lib.rs  ports.rs
crates/hodei-authorizer/tests/: allow_requires_both_test.rs  comprehensive_authorization_test.rs  deny_iam_overrides_all_test.rs  deny_scp_overrides_iam_test.rs  smoke_test.rs
crates/hodei-iam/: Cargo.toml  REFACTORING_SUMMARY.md
crates/hodei-iam/src/: api.rs  lib.rs  ports.rs
crates/hodei-iam/tests/: add_user_to_group_integration_test.rs  create_user_integration_test.rs  integration_add_user_to_group_comprehensive_test.rs  integration_create_group_comprehensive_test.rs  integration_create_policy_new_test.rs  integration_create_user_comprehensive_test.rs  integration_create_user_comprehensive_test.rs.disabled  integration_delete_policy_test.rs  integration_get_policy_test.rs  integration_list_policies_test.rs  integration_list_policies_test.rs.disabled  integration_update_policy_test.rs  integration_update_policy_test.rs.disabled  smoke_test.rs  unit_group_test.rs  unit_hrn_constructor_test.rs  unit_user_test.rs
crates/hodei-organizations/: Cargo.toml  README.md
crates/hodei-organizations/src/: lib.rs
crates/hodei-organizations/tests/: attach_scp_test.rs  create_account_test.rs  create_ou_test.rs  create_scp_test.rs  get_effective_scps_test.rs  integration_create_account_test.rs  move_account_test.rs  smoke_test.rs
crates/hodei-policies/: Cargo.toml  REFACTORING_SUMMARY.md
crates/hodei-policies/src/: api.rs  lib.rs
crates/hodei-policies/tests/: integration_test.rs
crates/iam/: Cargo.toml
crates/iam/src/: error.rs  lib.rs  test_utils.rs
crates/iam/tests/: analyze_policy_coverage_integration_test.rs  detect_policy_conflicts_integration_test.rs  enhanced_validation_integration_test.rs  hrn_validation_integration_test.rs  it_authorization_integration.rs  it_policy_validation.rs  it_resilience_iam_failures.rs  it_user_management.rs  policy_validation_integration_test.rs  validate_policy_integration_test.rs
crates/infra-mongo/: Cargo.toml  README.md
crates/infra-mongo/src/: config.rs  error.rs  lib.rs
crates/policies/: Cargo.toml  test_schema.rs
crates/policies/docs/: REFACTOR_STATUS.md
crates/policies/schemas/: repo_schema.cedarschema
crates/policies/src/: lib.rs
crates/policies/tests/: create_policy_use_case_test.rs  delete_policy_integration_test.rs  domain_compilation_test.rs  hodei_entity_test.rs  it_create_policy.rs  it_delete_policy.rs  it_evaluate_policy_surrealdb.rs  it_get_policy.rs  it_list_policies.rs  it_manage_policy_versions.rs  it_surrealdb_basic.rs  it_update_policy.rs  list_policies_integration_test.rs  principals_schema_test.rs  schema_rendering_final_test.rs  shared_parallel_test.rs  smoke_test.rs  test_schema.rs  update_policy_event_handler_test.rs  update_policy_use_case_test.rs
crates/repository/: Cargo.toml
crates/repository/src/: error.rs  lib.rs
crates/repository/tests/: it_create_repository.rs  it_repository_crud.rs  it_repository_store_integration.rs
crates/search/: ADVANCED_QUERY_IMPLEMENTATION_SUMMARY.md  Cargo.toml  FINAL_COMPLETION_SUMMARY.md  FINAL_IMPLEMENTATION_SUMMARY.md  FULL_IMPLEMENTATION_SUMMARY.md  FULL_TEXT_SEARCH_IMPLEMENTATION_SUMMARY.md  FULL_TEXT_SEARCH_PROGRESS_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  README.en.md  README.md  TESTCONTAINERS_INTEGRATION_GUIDE.md  TEST_COVERAGE_SUMMARY.md  WARNING_FIXES_SUMMARY.md
crates/search/src/: error.rs  lib.rs  main.rs
crates/search/tests/: advanced_query_integration_test.rs  integration_test.rs  it_advanced_search.rs  it_basic_search.rs  it_tantivy_search_integration.rs
crates/security/: Cargo.toml  README.md
crates/security/schema/: policy_schema.cedarschema.backup  policy_schema.json  test_schema.cedarschema
crates/security/src/: lib.rs  test_cedar_parsing.rs
crates/shared/: Cargo.toml  README.md
crates/shared-test/: Cargo.toml
crates/supply-chain/: Cargo.toml
crates_old/integration/: Cargo.toml  README.md
(+1965 files in other folders)
