[workspace]
members = [
    ".",
    "crates/shared",
    "crates/policies",
    "crates/hodei-iam",
    "crates/hodei-organizations",
    "crates/hodei-authorizer",
    # Inactive / experimental crates (keep commented until stabilized)
    # "crates/artifact",
    # "crates/repository",
    # "crates/supply-chain",
    # "crates/search",
    # "crates/security",
    # "crates/distribution",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
bytes = "1"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
bollard = "0.19.2"
anyhow = { version = "^1.0" }
async-trait = { version = "0.1.89" }
aws-config = "1.8.6"
bincode = "1.3"
aws-sdk-s3 = "1.106.0"
aws-types = { version = "1.3.8" }
aws-credential-types = { version = "1.2.6" }
axum = { version = "0.8.6", features = ["macros"] } # Using latest stable
base64 = "^0.22"
cedar-policy = "4.5.1"
chrono = { version = "^0.4", features = ["serde"] }
futures = { version = "0.3" }
futures-util = { version = "0.3" }
hex = "0.4"
hyper = { version = "1", features = ["full"] }
jsonwebtoken= "^9.3"
mime = "0.3"
lapin = { version = "3.6.0" }
redis = { version = "0.32.5", features = ["tokio-comp"] }
reqwest = { version = "0.12.23", features =["json"] }
ring = "^0.17"
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
sha2 = { version = "^0.10" }
ed25519-dalek = "2.0"
testcontainers = { version = "0.25.0" }
testcontainers-modules = { version = "0.13.0" }
thiserror = { version = "2.0.17" }
tokio = { version = "^1.47", features = ["full"] }
tokio-util = { version = "0.7" }
tracing = { version = "^0.1" }
uuid = { version = "1.18.1", features = ["v4", "serde"] } # Using latest stable
mockall = "0.13.1"
wiremock = "0.6.5"
mongodb = "3.1.0"

# SurrealDB dependencies
surrealdb = "2.3.9"

# Additional dependencies for centralized version management
url = "2.5.0"
tracing-subscriber = "0.3.20"
tracing-test = "0.2.5"
regex = "1.0"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6.6", features = ["cors", "trace", "timeout", "compression-br"]}
http = "1.1.0"
infer = "0.19.0"
metrics = "0.24.1"

[package]
name = "hodei-artifacts-api"
version = "0.1.0"
edition = "2024"
license = "MIT"

[features]
default = []
embedded = ["policies/embedded"]

[[bin]]
name = "hodei-artifacts-api"
path = "src/main.rs"

[dependencies]
# Point to the new crates (solo activos: shared, policies y hodei-iam)
shared = { path = "crates/shared" }
policies = { path = "crates/policies", features = ["mem"] }
hodei-iam = { path = "crates/hodei-iam" }
hodei-organizations = { path = "crates/hodei-organizations" }
hodei-authorizer = { path = "crates/hodei-authorizer" }

# Crates desactivados temporalmente (no maduros)
#artifact = { path = "crates/artifact" }
# repository = { path = "crates/repository" }
# "supply-chain" = { path = "crates/supply-chain" }
# search = { path = "crates/search" }
# security = { path = "crates/security" }
# distribution = { path = "crates/distribution" }
# organization = { path = "crates/organization" }


# Core
tokio = { workspace = true, features = ["full"] }
axum = { workspace = true, features = ["multipart"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = {version = "0.3.20", features = ["env-filter", "json"] }
tower-http = { version = "0.6.6", features = ["cors", "trace", "timeout", "compression-br"] }
tower = { workspace = true }
http = "1.1.0"
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

# OpenAPI/Swagger
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui= { version = "9.0", features = ["axum"] }

# Configuration
dotenvy = "0.15"

# Utilities
uuid = { workspace = true }
chrono = { workspace = true }
hyper = { workspace = true }
metrics = { workspace = true }

aws-config.workspace = true

[dev-dependencies]
hodei-organizations = { path = "crates/hodei-organizations" }
hodei-authorizer = { path = "crates/hodei-authorizer" }
surrealdb = { workspace = true }
