[workspace]
# Active workspace members (only core libs + root app). Root crate (.) kept to allow the API binary.
# NOTE: hodei-artifacts-api (root ".") temporarily has stub implementation during policies migration
members = [
    "crates/kernel",
    "crates/policies",
    "crates/hodei-iam",
    "crates/hodei-organizations",
    "crates/hodei-authorizer",
    ".", # Stub implementation - original code in src_disabled_migration_needed/
]
resolver = "2"

# Optimización de profiles para tests rápidos
[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"  # Faster linking on Linux
incremental = true

[profile.test]
inherits = "dev"
opt-level = 0

# Profile optimizado para desarrollo con tests rápidos
[profile.dev-fast]
inherits = "dev"
opt-level = 1  # Optimización mínima para balance velocidad/debug
debug = true
incremental = true

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
# Core async & runtime
tokio = { version = "^1.47", features = ["full"] }
async-trait = { version = "0.1.89" }
futures = { version = "0.3" }
futures-util = { version = "0.3" }
tokio-util = { version = "0.7" }

# Serialization / data
serde = { version = "^1.0", features = ["derive"] }
serde_json = { version = "^1.0" }
bincode = "1.3"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
chrono = { version = "^0.4", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }

# Crypto / security
ring = "^0.17"
sha2 = { version = "^0.10" }
ed25519-dalek = "2.0"
jsonwebtoken = "^9.3"

# HTTP / networking
axum = { version = "0.8.6", features = ["macros"] }
hyper = { version = "1", features = ["full"] }
reqwest = { version = "0.12.23", features = ["json"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6.6", features = ["cors", "trace", "timeout", "compression-br"] }

# Storage / DB / messaging
redis = { version = "0.32.5", features = ["tokio-comp"] }
lapin = "3.6.0"
mongodb = "3.1.0"
surrealdb = "2.3.9"

# AWS (object store / config)
aws-config = "1.8.6"
aws-sdk-s3 = "1.106.0"
aws-types = { version = "1.3.8" }
aws-credential-types = { version = "1.2.6" }

# Policy / authorization engine
cedar-policy = "4.5.1"

# Containers / testing
testcontainers = { version = "0.25.0" }
testcontainers-modules = { version = "0.13.0" }

# Misc utilities
anyhow = { version = "^1.0" }
thiserror = { version = "2.0.17" }
tracing = { version = "^0.1" }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
base64 = "^0.22"
bytes = "1"
hex = "0.4"
mime = "0.3"
wiremock = "0.6.5"
mockall = "0.13.1"
bollard = "0.19.2"
regex = "1.0"
metrics = "0.24.1"

# Additional utilities
url = "2.5.0"
tracing-test = "0.2.5"
http = "1.1.0"
infer = "0.19.0"

[package]
name = "hodei-artifacts-api"
version = "0.1.0"
edition = "2024"
license = "MIT"
publish = false
description = "Hodei API stub - Temporarily disabled during policies crate migration"

# Configuración recomendada para tests rápidos:
# cargo nextest run --lib -p kernel -p hodei-organizations -p hodei-iam -p hodei-authorizer

[[bin]]
name = "hodei-artifacts-api"
path = "src/main.rs"

[dependencies]
# Minimal dependencies for stub binary
