[package]
name = "artifact"
version = "0.1.0"
edition = "2024"

[features]
integration = []

auth = []

[dependencies]
uuid = "0.8"
anyhow = "1.0"
futures = "0.3"
async-trait = { workspace = true }
bytes = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
time = { workspace = true }
axum = { workspace = true, features = ["multipart"] }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
aws-credential-types = { workspace = true }
hex = { workspace = true }
futures-util = { workspace = true }
serde_json.workspace = true
mongodb = { workspace = true }
lapin = { workspace = true }
cedar-policy = { workspace = true }
tracing = { workspace = true }
tempfile = "3"
quick-xml = { version = "0.31", features = ["serialize"] }
serde-xml-rs = "0.6"

# Workspace dependencies
shared = { path = "../shared" }

[dev-dependencies]
reqwest = { workspace = true, features = ["multipart"] }
testcontainers = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-test = { workspace = true }
hyper = { workspace = true, features = ["server", "http1", "http2"] }

tokio-util = { workspace = true }
mime = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
