[package]
name = "hodei-authorizer"
version = "0.1.0"
edition = "2024"

[dependencies]
policies = { path = "../policies" }
hodei-organizations = { path = "../hodei-organizations" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
async-trait = "0.1"
cedar-policy = { workspace = true }
tracing = "0.1"
time = { version = "0.3", features = ["serde", "serde-well-known"] }
