[package]
name = "hodei-iam"
version = "0.1.0"
edition = "2024"

[dependencies]
policies = { path = "../policies" }
cedar-policy = { workspace = true }
serde = { workspace = true }
anyhow = "1.0"
async-trait = "0.1"
tokio = { workspace = true }
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
