[package]
name = "hodei-organizations"
version = "0.1.0"
edition = "2024"

[dependencies]
kernel = { path = "../kernel" }
policies = { path = "../policies" }
surrealdb = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
cedar-policy = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }


[dev-dependencies]
