[package]
name = "policies"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
# Core dependencies
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
shared = { path = "../shared" }
chrono = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

# Cedar Policy Engine
cedar-policy = { workspace = true }

# Database - SurrealDB for policy storage
surrealdb = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }

## testing dependencies are only declared under [dev-dependencies]

[features]
integration = []

[dev-dependencies]
mockall = { workspace = true }
testcontainers = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
