[package]
name = "policies"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
# Core dependencies
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
kernel = { path = "../kernel" }
chrono = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }

# Cedar Policy Engine
cedar-policy = { workspace = true }

# Database - SurrealDB for policy storage (backend via crate features)
surrealdb = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }
async-trait = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
dashmap = "6.1.0"

## testing dependencies are only declared under [dev-dependencies]

[features]
# default keeps only the in-memory SurrealDB backend and excludes legacy infra wiring.
# The new refactor path progressively reintroduces minimal adapters isolated per feature.
default = ["mem"]
mem = ["surrealdb/kv-mem"]
embedded = ["surrealdb/kv-rocksdb"]
integration = []
# Temporary flag: compiles legacy infrastructure (AuthorizationEngine, PolicyStore, Surreal adapters, DI helpers)
# This will be removed once all features are migrated to the new ports and adapters.
legacy_infra = []

[dev-dependencies]
mockall = { workspace = true }
testcontainers = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
