[package]
name = "repository"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
iam = { path = "../iam" }
shared = { path = "../shared" }
serde = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
infra-mongo = { path = "../infra-mongo" }
mongodb = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
regex = "1"
lazy_static = "1"
axum = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde_json = { workspace = true }

[features]
# integration-mongo: habilita tests de integración que requieren instancia Mongo real.
integration-mongo = []

[dev-dependencies]
# Requiere helpers de test infra (DB aislada / limpieza)
infra-mongo = { path = "../infra-mongo", features = ["test-util"] }
tokio = { workspace = true, features = ["full"] }

[[test]]
name = "it_create_repository"
path = "tests/it_create_repository.rs"
required-features = ["integration-mongo"]
