[package]
name = "security"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
time = { workspace = true }
shared = { path = "../shared" }
cedar-policy = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }