[package]
name = "security"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
time = { workspace = true }
shared = { path = "../shared" }
artifact = { path = "../artifact" }
cedar-policy = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
mongodb = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
axum = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
testcontainers = { workspace = true, features = ["blocking"] }
testcontainers-modules = { workspace = true, features = ["mongo"] }
wiremock = { workspace = true }
serde_json = { workspace = true }