[package]
name = "shared-test"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
artifact = { path = "../artifact" }
iam = { path = "../iam" }
infra-mongo = { path = "../infra-mongo" }
shared = { path = "../shared" }
tokio = { version = "1.47.1", features = ["full"] }
serde_json = { workspace = true }
base64 = { workspace = true }
tempfile = "3.21.0"
mongodb = "3.2.5"
portpicker = "0.1.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
aws-config = "^1.0"
aws-sdk-s3 = "^1.0"
cedar-policy = "4.5.1"
rdkafka = { version = "0.38.0", features = ["cmake-build"] }
thiserror = "2.0.16"
async-trait = "^0.1"
num_cpus = "1.16.0"

[dev-dependencies]
