[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
cedar-policy = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
surrealdb = { workspace = true }

[dev-dependencies]
tracing-test = { workspace = true }
