[package]
name = "integration"
version = "0.1.0"
edition = "2024"
license = "MIT"
[dependencies]
shared = { path = "../shared" }
serde = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
distribution = { path = "../distribution" }
repository = { path = "../repository" }
artifact = { path = "../artifact" }
search = { path = "../search" }

[dev-dependencies]
shared-test = { path = "../shared-test" }
tokio = { version = "1.47.1", features = ["full"] }
serde_json = { workspace = true }
base64 = { workspace = true }
reqwest = { version = "0.12.5", features = ["json", "multipart"] }
chrono = { version = "0.4", features = ["serde"] }
sha256 = "1.5.0"
